--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="https://drive.google.com/file/d/1ERmgXfbVTyGQ-eNvY_qhiFC38xBodsra/view?usp=sharing" class="btn btn--bg" target="_blank">Download CV</a>
+          <a href="https://drive.google.com/file/d/1QZn3aRHDvFNpUnY3awejG5lY_he3DRKX/view?usp=drive_link" class="btn btn--bg" target="_blank">Download CV</a>
         </div>
       </div>
       <div class="home-hero__socials">
